k8s/analytics-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  labels:
    app: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: mt2024013/analytics-service
        ports:
        - containerPort: 3004
        resources:
          limits:
            memory: 256Mi
            cpu: "0.2"
          requests:
            memory: 128Mi
            cpu: "0.1"
        livenessProbe:
          httpGet:
            path: /
            port: 3004
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3004
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
  - port: 3004
    targetPort: 3004
  type: ClusterIP
